fix_load/destination-rule-all-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews
spec:
  host: reviews
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
      loadBalancer:
        simple: LEAST_CONN
      outlierDetection: 
        consecutive5xxErrors: 3
        interval: 1s
        baseEjectionTime: 1m
        maxEjectionPercent: 100
  - name: v2
    labels:
      version: v2
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
      loadBalancer:
        simple: LEAST_CONN
      outlierDetection: 
        consecutive5xxErrors: 3
        interval: 1s
        baseEjectionTime: 1m
        maxEjectionPercent: 100
  - name: v3
    labels:
      version: v3
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
      loadBalancer:
        simple: LEAST_CONN
      outlierDetection: 
        consecutive5xxErrors: 3
        interval: 1s
        baseEjectionTime: 1m
        maxEjectionPercent: 100
